new file images

--- a/recipes/escondidinho.html
+++ b/recipes/escondidinho.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="https://static.itdg.com.br/images/640-400/327a645d249ca6da97711639ab593dd4/170712-134949-original.jpg">
+    <img src="../images/escondidinho.jpg">
 
     <h1>Receita de Escondidinho</h1>
 
