--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="https://static.itdg.com.br/images/640-400/ec2a5e38702c60bf1ace0b5f1c8e9415/shutterstock-739787011.jpg">
+    <img src="../images/lasanha.jpg">
     <h1>Receita de Lasanha</h1>
     <p><h4>A receita de lasanha de carne moída é um prato clássico, muito amado e muito fácil de preparar.</h4></p>
     <p>
