--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="https://static.itdg.com.br/images/640-400/5bbf04e086230577084a0e875eb11a42/79200-original.jpg">
+    <img src="../images/pizza.jpg">
     <h1>Receita de Pizza</h1>
 
     <p><h3>Não há nada melhor do que fazer a noite da pizza em casa com essa receita de pizza caseira deliciosa! Ela é tão boa que até parece que foi feita por um pizzaiolo profissional. 
